# Terminal-Sweeper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.markdown  README.md  app.cpp  app.h  bruteForceLogic.cpp  bruteForceLogic.h  failMap.cpp  failMap.txt  generateCombinations.py  generateHardCodedCombination.cpp  incongruency.cpp  incongruency.h  main.cpp  mineMap.cpp  mineMap.h  mineMapPrivate.cpp  probabilityFinder.cpp  probabilityFinder.h  probabilityFinderPrivate.cpp  probabilityFinderUtil.cpp  settings.txt  solver.cpp  solver.h  solverPrivate.cpp  solverPrivateGrouping.cpp  solverUtil.cpp  test.cpp  util.h
benchmark/: CMakeLists.txt
benchmark/mine_sweeper/: CMakeLists.txt  mine_sweeper_benchmark.cpp
benchmark/util/: CMakeLists.txt  util_benchmark.cpp
bindings/: CMakeLists.txt  test.py
bindings/python/: mine_sweeper_binding.cpp  mine_sweeper_solver_binding.cpp  python_binding.cpp
doc/: failMap.txt  settings.txt
include/: app.h  mineMap.h  mineSweeper.h  mineSweeperSolutionFinder.h  mineSweeperSolver.h  probabilityFinder.h  solver.h  solverTile.h
log/: latest_list
src/: CMakeLists.txt  app.cpp  main.cpp  mineMap.cpp  mineSweeper.cpp  mineSweeperSolutionFinder.cpp  mineSweeperSolver.cpp  probabilityFinder.cpp  solver.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/app/include/: app.hpp  image.hpp  shader.hpp
src/app/src/: app.cpp  image.cpp  shader.cpp
src/hardcodedCombinations/include/: hardcodedCombinations.hpp
src/hardcodedCombinations/src/: hardcodedCombinations.cpp
src/mineSweeper/: CMakeLists.txt  mineSweeper.cpp  mineSweeper.hpp
src/mineSweeper/include/: mineSweeper.hpp
src/mineSweeper/src/: mineSweeper.cpp
src/mineSweeperSolutionFinder/: mineSweeperSolutionFinder.hpp
src/mineSweeperSolver/: CMakeLists.txt  mineSweeperSolver.cpp  mineSweeperSolver.hpp
src/mineSweeperSolver/include/: mineSweeperSolutionFinder.hpp  mineSweeperSolver.hpp  solverTile.hpp
src/mineSweeperSolver/src/: mineSweeperSolutionFinder.cpp  mineSweeperSolver.cpp
src/mine_sweeper/: CMakeLists.txt
src/mine_sweeper/include/: mine_sweeper.hpp  mine_sweeper_constants.hpp  mine_sweeper_tile.hpp  mine_sweeper_tile_aliases.hpp  tile_string.hpp
src/mine_sweeper/src/: mine_sweeper.cpp  tile_string.cpp
src/mine_sweeper_solver/: CMakeLists.txt
src/mine_sweeper_solver/include/: mine_sweeper_solver.hpp  mine_sweeper_solver_aliases.hpp  mine_sweeper_solver_constants.hpp  mine_sweeper_solver_functions.hpp  mine_sweeper_solver_probs.hpp  solution_set.hpp  tile_expected_value.hpp
src/mine_sweeper_solver/src/: mine_sweeper_solver.cpp  mine_sweeper_solver_functions.cpp  mine_sweeper_solver_probs.cpp  solution_set.cpp  tile_expected_value.cpp
src/sVector/: sVector.hpp
src/stack_vector/: CMakeLists.txt  stack_vector.hpp
src/util/: CMakeLists.txt
src/util/include/: log.hpp  util.hpp
test/: CMakeLists.txt
test/mine_sweeper_solver_tests/: CMakeLists.txt  mine_sweeper_solver_test.cpp
test/mine_sweeper_tests/: CMakeLists.txt  mine_sweeper_test.cpp  mine_sweeper_tile_test.cpp
tests/: test0.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
